--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{https://scholar.google.com.au/citations?user=rMB6VwYAAAAJ&hl=en&oi=ao}}">my Google Scholar profile</a>.</div>
+  <div class="wordwrap">Here are some of my recent publications and preprints. You can also find my articles on <a href="{{https://scholar.google.com.au/citations?user=rMB6VwYAAAAJ&hl=en&oi=ao}}">my Google Scholar profile</a>. </div>
 {% endif %}
 
 {% include base_path %}
