--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 {% if site.author.googlescholar %}
-  <div class="wordwrap">Here are some of my recent publications and preprints. Check out my <a href="{{https://scholar.google.com.au/citations?user=rMB6VwYAAAAJ&hl=en&oi=ao}}">Google Scholar profile</a> for more publications. </div>
+  <div class="wordwrap">Here are some of my recent publications and preprints. Check out my <a href="https://scholar.google.com.au/citations?user=rMB6VwYAAAAJ&hl=en&oi=ao">Google Scholar profile</a> for more publications. </div>
 {% endif %}
 
 {% include base_path %}
