--- a/_pages/year-archive.html
+++ b/_pages/year-archive.html
@@ -4,7 +4,7 @@ permalink: /year-archive/
 title: "Blog posts"
 author_profile: true
 redirect_from:
-  - /wordpress/posts/
+  - /wordpress/blog-posts/
 ---
 
 {% include base_path %}
